--- a/asset/style.css
+++ b/asset/style.css
@@ -41,3 +41,32 @@ body{
     text-transform: uppercase;
     color: #222;
 }
+
+.project-heading span{
+    color: #f33c3f;
+}
+
+.project-filter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid rgba(237,237,237,0.6);
+    flex-wrap: wrap;
+    margin: 20px;
+}
+
+.project-filter li{
+    margin: 10px;
+    padding: 5px 20px;
+    color: #9b9b9b;
+    font-size: 1rem;
+    letter-spacing: 0.5px;
+    font-weight: 400;
+    cursor: pointer;
+    user-select: none;
+}
+
+.project-filter-active{
+    background-color: #f0f0f0;
+    color: #272727;
+}
