--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -70,3 +70,27 @@ body{
     background-color: #f0f0f0;
     color: #272727;
 }
+
+
+.project-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.project-box{
+    width: 330px;
+    padding: 15px;
+    border: 1px solid #eeeeee;
+    margin: 20px;
+}
+
+.project-box img{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    border-radius: 5px;
+}
